--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-MONGO_URL='mongodb://127.0.0.1:27017/tomar'
-JWT_SECRET="sunnytomar06"
-port=5000
+MONGO_URL= "monogodb uri "
+JWT_SECRET= "json web token scerty key"
+port= "port to run backend"
